--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.1",
+    "@react-navigation/drawer": "^5.10.1",
+    "@react-navigation/native": "^5.8.1",
+    "@react-navigation/stack": "^5.11.0",
     "expo": "~39.0.2",
+    "expo-sharing": "~8.4.1",
+    "expo-splash-screen": "~0.6.1",
+    "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.3",
-    "expo-splash-screen": "~0.6.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
     "react-native-web": "~0.13.12"
