--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.1",
     "@react-navigation/drawer": "^5.10.1",
     "@react-navigation/native": "^5.8.1",
     "@react-navigation/stack": "^5.11.0",
+    "apollo3-cache-persist": "^0.8.0",
     "expo": "~39.0.2",
     "expo-sharing": "~8.4.1",
     "expo-splash-screen": "~0.6.1",
@@ -30,20 +32,13 @@
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-persist-expo-filesystem": "^2.0.0",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "redux-persist-expo-fs-storage": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "@types/react-redux": "^7.1.9",
-    "@types/redux": "^3.6.0",
     "babel-preset-expo": "~8.3.0",
     "jest-expo": "~39.0.0",
     "react-devtools": "^4.9.0",
