--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@expo-google-fonts/cormorant-garamond": "^0.1.0",
+    "@expo-google-fonts/gotu": "^0.1.0",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.1",
@@ -17,6 +19,8 @@
     "@react-navigation/stack": "^5.11.0",
     "apollo3-cache-persist": "^0.8.0",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
+    "expo-linear-gradient": "~8.3.0",
     "expo-sharing": "~8.4.1",
     "expo-splash-screen": "~0.6.1",
     "expo-status-bar": "~1.0.2",
@@ -28,10 +32,11 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-shared-element": "^0.7.0",
     "react-native-unimodules": "~0.11.0",
     "react-native-web": "~0.13.12",
+    "react-navigation-shared-element": "^5.0.0-alpha1",
     "redux-persist-expo-fs-storage": "^2.1.0"
   },
   "devDependencies": {
