--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.11.0",
     "apollo3-cache-persist": "^0.8.0",
     "expo": "~39.0.2",
+    "expo-blur": "~8.2.0",
     "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-sharing": "~8.4.1",
@@ -29,8 +30,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-markdown-display": "^7.0.0-alpha.2",
+    "react-native-markdown-renderer": "^3.2.8",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
     "react-native-shared-element": "^0.7.0",
