--- a/package.json
+++ b/package.json
@@ -18,26 +18,27 @@
     "@react-navigation/native": "^5.8.1",
     "@react-navigation/stack": "^5.11.0",
     "apollo3-cache-persist": "^0.8.0",
-    "expo": "~39.0.2",
-    "expo-blur": "~8.2.0",
-    "expo-font": "~8.3.0",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-sharing": "~8.4.1",
-    "expo-splash-screen": "~0.6.1",
-    "expo-status-bar": "~1.0.2",
-    "expo-updates": "~0.3.3",
+    "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-blur": "~8.2.2",
+    "expo-font": "~8.4.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-sharing": "~8.5.0",
+    "expo-splash-screen": "~0.8.1",
+    "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.1",
     "graphql": "^15.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.3",
+    "react-native": "0.63.4",
     "react-native-expo-image-cache": "^4.1.0",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.10.1",
-    "react-native-shared-element": "^0.7.0",
-    "react-native-unimodules": "~0.11.0",
+    "react-native-screens": "~2.15.2",
+    "react-native-shared-element": "0.7.0",
+    "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "redux-persist-expo-fs-storage": "^2.1.0"
@@ -47,10 +48,10 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "babel-preset-expo": "~8.3.0",
-    "jest-expo": "~39.0.0",
+    "babel-preset-expo": "8.3.0",
+    "jest-expo": "^40.0.0",
     "react-devtools": "^4.9.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.0.0"
   },
   "jest": {
     "preset": "react-native"
